--- a/package.json
+++ b/package.json
@@ -3,15 +3,14 @@
   "description": "A semantic version parser for NuGet (https://docs.microsoft.com/en-us/nuget/reference/package-versioning), based on the API of npm's semver",
   "main": "index.js",
   "scripts": {
-    "lint": "jscs lib/*.js && jshint lib/*.js",
+    "lint": "eslint lib test",
     "test": "npm run lint && ava --verbose"
   },
   "author": "snyk.io",
   "license": "Apache-2.0",
   "devDependencies": {
     "ava": "^0.23.0",
-    "jscs": "^3.0.7",
-    "jshint": "^2.9.5"
+    "eslint": "^6.6.0"
   },
   "repository": {
     "type": "git",
